# 5homework

./: CMakeLists.txt
include/statistic/: istatistics.h  max.h  mean.h  min.h  pct.h  std.h
src/: main.cpp
src/statistic/: max.cpp  mean.cpp  min.cpp  pct.cpp  std.cpp
